--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "start:dev": "react-native start --reset-cache && ENVFILE=env/dev.env react-native run-android", 
+    "start:stage": "react-native start --reset-cache && ENVFILE=env/stage.env react-native run-android", 
+    "start:prod": "react-native start --reset-cache && ENVFILE=env/prod.env react-native run-android",
     "test": "jest"
   },
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
